tests/fixtures/invalid/max_none_int.py
# Cannot call max() with None, Int
x = max(None, 1)
